--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -21,7 +21,7 @@
         <div class="col-sm-2">
           <p class="f-header text-left">CONTACT</p>
           <a href="mailto:info@thinq.tv" alt="Email" target="_blank" class="f-link">info@ThinQ.tv</a><br>
-          <a class="f-link">602-888-3089</a><br><br>
+          <a class="f-phone">602-888-3089</a><br><br>
 
         </div>
         <br class="visible-lg-block">
@@ -38,19 +38,19 @@
               'newwindow',
               'width=600,height=400,top=100,left=300');
               return false;">
-              <%= image_tag("facebook_icon.png", :style => "width:25px; height:25px;") %>
+              <%= image_tag("facebook_iconBW.png", :style => "width:25px; height:25px;") %>
             </a>
             <!-- Twitter Tweet -->
             <a href="https://twitter.com/intent/tweet?hashtags=ThinQTV&text=Participate%20in%20live%20thought-provoking%20conversations%20or%20Host%20your%20own%20Live%20Video%20office%20hours!&tw_p=tweetbutton&url=http%3A%2F%2Fwww.ThinQ.tv%2F">
-              <%= image_tag("twitter_icon.png", :style => "margin-left: 5px; width:25px; height:25px;") %>
+              <%= image_tag("twitter_iconBW.png", :style => "margin-left: 5px; width:25px; height:25px;") %>
             </a>
             <!-- LinkedIn Share -->
             <a href="https://www.linkedin.com/shareArticle?mini=true&url=<%= domainurl %>&title=ThinQTV&summary=<%= desc %>" onclick="window.open(this.href, 'mywin',); return false;">
-              <%= image_tag("linkedin_icon.png", :style => "margin-left: 5px; width:25px; height:25px;") %>
+              <%= image_tag("linkedin_iconBW.png", :style => "margin-left: 5px; width:25px; height:25px;") %>
             </a>
             <!-- Email Share -->
             <a href="mailto:?subject=Check out ThinQ.TV! Conversations to Make you ThinQ&amp;body=You are invited to check out <%= domainurl %>!%0D%0A%0D%0A<%= desc %>%0D%0A%0D%0AHost your own Live Video office hours on thought-provoking topics!%0D%0A%0D%0A%0D%0A%0D%0A">
-              <%= image_tag("email_icon.png", :style => "margin-left: 5px; width:25px; height:25px;") %>
+              <%= image_tag("email_iconBW.png", :style => "margin-left: 5px; width:25px; height:25px;") %>
             </a>
           </div>
         </div>
