--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,21 +1,21 @@
 <div>
   <header>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-primary">
-    <%= link_to image_tag("yellow brain.png", title: "ThinQ.tv", id: "navbarLogo", width: "30", height: "30"), root_path %>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-primary" id="light-boxshadow">
+    <%= link_to image_tag("yellow brain.png", title: "ThinQ.tv", id: "navbarLogo", width: "45", height: "45"), root_path %>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item" style="margin-right: 20px">
-            <a class="nav-link text-white" href="/">Home</a>
+          <li class="nav-item" style="margin-right: 30px; margin-left: 30px">
+            <a class="nav-link text-white" id="navLink" href="/">Home</a>
           </li>
-          <li class="nav-item" style="margin-right: 20px">
-            <a class="nav-link text-white" href="/aboutus">About Us</a>
+          <li class="nav-item" style="margin-right: 30px">
+            <a class="nav-link text-white" id="navLink" href="/aboutus">About Us</a>
           </li>
-          <li class="nav-item" style="margin-right: 20px">
-            <a class="nav-link text-white" href="/jointheteam">Join the Team</a>
+          <li class="nav-item" style="margin-right: 30px">
+            <a class="nav-link text-white" id="navLink" href="/jointheteam">Join the Team</a>
           </li>
         </ul>
 
