--- a/app/views/layouts/_renderdayhome.html.erb
+++ b/app/views/layouts/_renderdayhome.html.erb
@@ -1,6 +1,39 @@
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0"></script>
 <% offset = -1 * Time.now.in_time_zone("Pacific Time (US & Canada)").gmt_offset/3600%>
 <%eventCount = 0%>
+
+<!-- Title, Time, Activity, Share CODE
+<div class="row">
+  <div class = "col-xs-3" style="color:#000; margin-right: 5.5%; width: 34.5%; display: inline; float:left;" >
+    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; padding-left: 11.5%; font-size:140%; color:#8C1D40">
+      <strong>Title</strong>
+    </h2>
+  </div>
+
+  <div class = "col-xs-3" style="color:#000; margin-right:5%; width: 16.5%; display: inline; float:left;" >
+    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; font-size:140%; color:#8C1D40">
+      <strong>Time</strong>
+    </h2>
+  </div>
+
+  <div class = "col-xs-3" style="color:#000; margin-right:5%; width: 16%; display: inline; float:left;" >
+    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; font-size:140%; color:#8C1D40">
+      <strong>Activity</strong>
+    </h2>
+  </div>
+
+  <div class = "col-xs-3" style="color:#000; width: 16%; display: inline; float:left;" >
+    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; font-size:140%; color:#8C1D40">
+      <strong>Share</strong>
+    </h2>
+  </div>
+
+  <div style="width: 94%; margin: auto;">
+    <hr>
+  </div>
+</div>
+-->
+
 <div class="panel panel-default border-right border-left border-top table-responsive">
   <% if @calendar_events_all.count != 0 %>
     <table class="table table-hover" id=calendar>
@@ -10,24 +43,24 @@
             <%eventCount += 1%>
             <% user = User.find(event.user_id) %>
             <tr>
-              <td class=col-xs-3>
+              <td class=col-xs-3 style="text-align: left; padding-left: 40px;">
                 <div id = "calendar-event">
-                  <%= link_to event.name, event_path(event.id), id: "calendar-event", title: event.desc %>
+                  <%= link_to event.name, event_path(event.id), id: "calendar-event", title: event.desc, style: "font-weight:700; font-size: 120%; color: black; margin-bottom: 1rem;" %>
                 </div>
                 <%= link_to user.name, user.permalink%>
                 <% if user_signed_in? %>
                   <% if event.user_id == current_user.id %>
-                    <%= link_to '(Edit Conversation)', edit_event_path(event.id), id: "calendar-host" %>
+                    <%= link_to '(Edit Conversation)', edit_event_path(event.id), id: "calendar-host", style: "font-size: 80%; font-weight: normal; color: #343a40" %>
                   <% end %>
                 <% end %>
               </td>
-              <td class=col-xs-3>
+              <td class=col-xs-3 style="text-align: left;">
                 <% edt = event.start_at + 3.hours %>
                 <% dayId = "week-day-#{currentDate.strftime('%A')}-#{i}"%>
                 <% timeId = "week-time-#{currentDate.strftime('%A')}-#{i}"%>
                 <span style="font-size:125%;" id="<%=dayId%>"></span>
                 <br>
-                <span style="font-size:90%;"id="<%=timeId%>"></span>
+                <span style="font-size:90%; font-weight: normal; color: #343a40" id="<%=timeId%>"></span>
               </td>
               <script>
                 var date = new Date(Date.parse("<%= event.start_at.strftime("%FT%T%:z") %>"));
@@ -101,7 +134,7 @@
                       <% else %>
                         <%= f.text_field :email, :style => "border: 1px solid grey; border-radius: 0px;", placeholder: "Enter email", :class =>"enter_email" %>
                         <%= f.submit "RSVP", :style => "color: #fff; background-color: #880f42; padding: 2px 20px; font-weight: normal; border-radius:0px;", :id => "RSVPsubmit" %>
-                      <!-- disable until ssl working 
+                      <!-- disable until ssl working
                         <div><br><%= recaptcha_tags :style => "transform:scale(0.75);transform-origin:0 0" %></div>
                         -->
                       <% end %>
@@ -114,7 +147,7 @@
                 <% domainurl = "http://www.thinq.tv/"%>
                 <p style="color: black;">Share to</p>
                 <!-- Facebook Share -->
-                <a href="http://www.facebook.com/sharer.php?u=<%= domainurl %><%= user.permalink %>%"
+                <a id="f-social" href="http://www.facebook.com/sharer.php?u=<%= domainurl %><%= user.permalink %>%"
                   onclick="window.open('http://www.facebook.com/sharer.php?u=<%= domainurl %><%= user.permalink %>',
                   'newwindow',
                   'width=600,height=400,top=100,left=300');
@@ -124,16 +157,16 @@
                 </a>&nbsp
 
                   <!-- Twitter Share -->
-                  <a href="https://twitter.com/intent/tweet?text=Join <%= user.name %>'s' Conversation to talk about: <%= event.name + "," %> <%= event.start_at.strftime("%B %d, %I:%M %p")%> PDT: http://www.thinq.tv/<%= user.permalink %>%20Every%20afternoon%20and%20evening%20ThinQ.tv%20has%20meaningful%20live%20video%20chat%20conversations%20to%20get%20you%20motivated%20for%20the%202020%20elections.%20Go%20to%20http://ThinQ.tv%20and%20browse%20the%20schedule%20of%20Conversations."
+                  <a id="f-social" href="https://twitter.com/intent/tweet?text=Join <%= user.name %>'s' Conversation to talk about: <%= event.name + "," %> <%= event.start_at.strftime("%B %d, %I:%M %p")%> PDT: http://www.thinq.tv/<%= user.permalink %>%20Every%20afternoon%20and%20evening%20ThinQ.tv%20has%20meaningful%20live%20video%20chat%20conversations%20to%20get%20you%20motivated%20for%20the%202020%20elections.%20Go%20to%20http://ThinQ.tv%20and%20browse%20the%20schedule%20of%20Conversations."
                     onclick="window.open('https://twitter.com/intent/tweet?text=Join <%= user.name %> Conversation: <%= event.name + "," %> <%= event.start_at.strftime("%B %d, %I:%M %p")%> PDT: http://www.thinq.tv/<%= user.permalink %>,
                     'newwindow',
-                    'width=600,height=400,top=80,left=300');
+                    'width=600,height=400,top=100,left=300');
                     return false;">
                     <%= image_tag("social-share-button/twitter.png")%>
                   </a>&nbsp
 
                 <!-- LinkedIn -->
-                <a href="https://www.linkedin.com/shareArticle?mini=true&url=<%= @surl %>"
+                <a id="f-social" href="https://www.linkedin.com/shareArticle?mini=true&url=<%= @surl %>"
                   onclick="window.open('https://www.linkedin.com/shareArticle?mini=true&url=<%= @surl %>',
                   'newwindow',
                   'width=600,height=400,top=100,left=300');
